fix up layout
bottom row was not aligning to rest of grid.

--- a/css/styles.css
+++ b/css/styles.css
@@ -30,10 +30,10 @@ img {
 	font-size: 0.75em
 }
 .cell {
-	overflow: hidden;
-	display: inline-block;
-    /*margin: 0 5px;*/
+	overflow: hidden;/*
+	display: inline-block;*/
 	min-width: 250px;
+	float: left;
 	max-width: 300px;
 }
 .itemLink {
@@ -44,22 +44,40 @@ img {
 	height: 100%;
 	margin: 0 auto;
 	max-width: 1300px;
-	text-align: center; /* align horizontal */
+	text-align: center;
+	background-color: blue;
 }
 
-@media (max-width : 920px){
+@media (max-width : 500px){
+	#main-content{
+		max-width: 305px;
+	}
 	.cell {
 		width: 100%;
 	}
 }
-@media (max-width: 1100px) and (min-width: 921px){
+@media (max-width: 1100px) and (min-width: 501px){
+	#main-content{
+		max-width: 615px;
+	}
 	.cell {
 		width: 45%;
 	}
 }
-@media (min-width: 1101px){
+@media (max-width: 1450px) and (min-width: 1101px){
+	#main-content{
+		max-width: 900px;
+	}
 	.cell {
-		width: 30%;
+		width: 31%;
+	}
+}
+@media (min-width: 1451px){
+	#main-content{
+		max-width: 1290px;
+	}
+	.cell {
+		width: 25%;
 	}
 }
 
